<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Funciones3.fin">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/btnE"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/mapback" />

    <Button
        android:id="@+id/btnF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/again"
         />

    <TextView
        android:id="@+id/txtPuntosFinal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="250dp"
        android:text="TextView"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnDescargarPDF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="300dp"
        android:text="@string/pdf"
        />

    <Button
        android:id="@+id/btnCompartirBluetooth"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="380dp"
        android:text="@string/compartir"
        />

</FrameLayout>